2015-04-18 Ben Shi <powerstudio1st AT 163 DOT com>
	* sim/ucsim/configure.in:
	* sim/ucsim/configure:
	* sim/ucsim/packages_in.mk:
	  Do not build disabled ports.

2015-04-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* sdas/linksrc/Makefile.in:
	  Fix the issue that "make install" of sdld* failed on Windows.

2015-04-16 Ben Shi <powerstudio1st AT 163 DOT com>
	* device/include/Makefile.in:
	  Fix the problem that the header files of ds400 are not installed.
	* sdas/linksrc/Makefile.in:
	  Do not install unnecessary sdld* for disabled ports.

2015-04-15 Ben Shi <powerstudio1st AT 163 DOT com>
	* Makefile.common.in:
	* Makefile.in:
	  Partially fix bug #2369.
	* configure:
	* configure.in:
	* device/lib/Makefile.in:
	* src/ds400/Makefile.in:
	* src/ds400/main.c:
	* src/ds400/main.h:
	  Delete the empty stuff src/ds400/ .
	* support/regression/tests/z88dk.c:
	  Fix compiling errors.

2015-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/z80/main.c,
	  src/z80/gen.c,
	  support/regression/tests/z88dk.c:
	  Support for __z88dk_callee calling convention on the caller side.

2015-04-11 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/scripts/sdcc.nsi:
	  Remove savr which is disabled by default.

2015-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/z88dk.c:
	  Fix bug number in comment.

2015-04-10 Ben Shi <powerstudio1st AT 163 DOT com>
	* debugger/mcs51/configure:
	* debugger/mcs51/Makefile.in:
	* debugger/mcs51/configure.in:
	* sim/ucsim/st7.src/Makefile.in:
	* sim/ucsim/z80.src/Makefile.in:
	* sim/ucsim/stm8.src/Makefile.in:
	* sim/ucsim/xa.src/Makefile.in:
	* sim/ucsim/s51.src/Makefile.in:
	* sim/ucsim/avr.src/Makefile.in:
	* sim/ucsim/hc08.src/Makefile.in:
	* sim/ucsim/configure:
	* sim/ucsim/Makefile.in:
	* sim/ucsim/configure.in:
	  Support --program-prefix and --program-suffix.

2015-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/ctype.h,
	  device/lib/isblank.c: